--- a/app/src/main/res/layout/activity_album_detail_expanded.xml
+++ b/app/src/main/res/layout/activity_album_detail_expanded.xml
@@ -103,11 +103,15 @@
             android:id="@+id/lyrics"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/track_panel"
-            android:layout_margin="15dp"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/track_panel"
+            android:background="#ff333333"
+            android:paddingEnd="32dp"
+            android:paddingStart="32dp"
             android:text="@string/lyrics"
             android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceInverse"
+            android:textColor="@android:color/white"
             android:textSize="24sp"
             android:textStyle="italic"
             android:typeface="sans" />
